# designmd-pptx

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feedback.md
.github/workflows/: ci.yml
.grok/commands/: designmd-pptx.md
.grok/docs/: install.md
commands/: designmd-pptx.md
corpus/: .gitignore  corpus.manifest.json
demo/: README.md  a11y.report.json  apple.DESIGN.md  content.best.deck.json  content.flagship.deck.json  content.intro.deck.json  content.showcase.deck.json  designmd-pptx-best-v2.1.2.pptx  designmd-pptx-intro-v2.1.2.pptx  designmd-pptx-showcase-northstar.pptx  northstar.DESIGN.md
demo/motifs/: agenda_list.sequence.json  bullet_stack.sequence.json  calendar_grid.sequence.json  canvas_bmc.sequence.json  card_row.sequence.json  case_band.sequence.json  chart_panel.sequence.json  check_stack.sequence.json  chevron_flow.sequence.json  close_mark.sequence.json  consort_spine.sequence.json  data_table.sequence.json  device_chrome.sequence.json  empathy_quad.sequence.json  finance_grid.sequence.json  fishbone_spine.sequence.json  forest_ci.sequence.json  framework_bar.sequence.json  freeform_stage.sequence.json  funnel_cascade.sequence.json  gantt_track.sequence.json  geo_pins.sequence.json  hex_honey.sequence.json  hub_orbit.sequence.json  iceberg_depth.sequence.json  (+41 more)
docs/: commands.md  concepts.md  corpus.md  design-md-v2.md  editor-integration-decision.md  gallery.md  governance.md  index.md  infograpify-reference.md  install.md  maturity-roadmap.md  migration-v1-v2.md  motifs.md  officecli-backends.md  production-readiness.md  public-benchmark.md  recipe-coverage-roadmap.md  reference-catalog-clusters.json  smoke-v2.1.1.md  ui-kit.md  windows-installer.md
python/: ACCEPTANCE.md  README.md  requirements.txt
scripts/: check-plugin.mjs  cluster_reference_catalog.py  generate_motif_goldens.py  install-codex.ps1  smoke-v2.1.1.sh  sync-adapters.mjs
(+304 files in other folders)
